# Matrix

./: .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile.in  LICENSE  Matrix.cpp  Matrix.hpp  Matrix_test.cpp  README.md
.github/workflows/: main.yml
src/: CMakeLists.txt  matrix.cpp  matrix.hpp
test/: CMakeLists.txt  Matrix_test.cpp  matrix_googletest.cpp
